--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -8,10 +8,11 @@
   width: 350px;
   border-radius: 1.5rem;
   justify-self: center;
+  filter: grayscale(100%);
 }
 
 .about__info {
-  grid-template-columns: repeat(3, 140px);
+  grid-template-columns: repeat(2, 160px);
   gap: 0.5rem;
   margin-bottom: var(--mb-2);
 }
@@ -42,6 +43,10 @@
 .about__description {
   padding: 0 4rem 0 0;
   margin-bottom: var(--mb-2-5);
+}
+
+.button__icon-file {
+  font-size: 1.2rem;
 }
 
 /* Breakpoints */
@@ -77,7 +82,7 @@
 /* Medium device */
 @media screen and (max-width: 576px) {
   .about__info {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
   
   .about__description {
