--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -53,10 +53,10 @@
 }
 
 .home__img {
-  background: url(../../assets/pp.jpg);
+  /* background: url(../../assets/pp.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: cover; */
   width: 300px;
   height: 300px;
   box-shadow: inset 0 0 0 9px rgb(255 255 255 / 30%);
